[gd_scene load_steps=4 format=3 uid="uid://80o8xjbguqvp"]

[ext_resource type="Script" uid="uid://rtpi8xeipisn" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Script" uid="uid://vdl1hwhcq6xq" path="res://Player/weapon_slot.gd" id="2_4ntmi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l8h54"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_4ntmi")

[node name="weaponContainer" type="Node2D" parent="."]
script = ExtResource("2_4ntmi")


[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_l8h54")

[node name="legsContainer" type="Node2D" parent="."]

[node name="legsSprite" type="AnimatedSprite2D" parent="legsContainer"]

[node name="torsoContainer" type="Node2D" parent="."]

[node name="torsoSprite" type="Sprite2D" parent="torsoContainer"]
